fixed styling issues on smaller windows and fixed timing issue where arrows overlap

--- a/css/style.css
+++ b/css/style.css
@@ -35,15 +35,17 @@ h1 {
   color: white;
 }
 
-
+.canvas-box {
+  display: inline;
+}
 
 
 .game {
+  text-align: center;
   position: absolute;
   display: none;
   height: 100%;
   width: 100%;
-  position: absolute;
   background-image: url('../images/background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -104,7 +106,7 @@ button:hover {
 }
 
 #scorebox2 {
-  margin-left: 40px;
+  display: inline;
 }
 
 .restart {
@@ -116,10 +118,9 @@ button:hover {
   overflow: hidden;
   outline:none;
   color: white;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  font-size: 40px;
-  height: 45%;
+  font-size: 35px;
+  margin-top: 0;
+  width: 100%;
 }
 
 .restart:hover {
@@ -133,23 +134,21 @@ button:hover {
 #mnutxt {
   writing-mode: vertical-rl;
   text-orientation: upright;
-  padding-right:200px;
 }
 
 .main-menu {
+  margin-top: 10px;
   text-align: center;
   background-image: none;
   background-color: Transparent;
   background-repeat:no-repeat;
   border: none;
   cursor:pointer;
+  margin-top: 0;
   outline:none;
   color: white;
-  margin-top: 10%;
-  margin-right: 40px;
-  margin-bottom: 10px;
-  font-size: 35px;
-  height: 50%;
+  font-size: 30px;
+  width: 100%;
 }
 
 .main-menu:hover {
@@ -181,6 +180,7 @@ span {
 }
 
 .score {
+  display: inline;
   writing-mode: vertical-rl;
   text-orientation: upright;
 }
@@ -190,13 +190,8 @@ span {
   height: 80px;
 }
 
-.canvas-box {
-  display: inline-block;
-}
-
 .score {
-  /* vertical-align: top; */
-  display: inline-block;
+  display: inline;
   width: 8%;
   height: 750px;
 }
@@ -204,8 +199,9 @@ span {
 
 .game-menu {
   vertical-align: top;
-  width: 10%;
-  height: 750px;
+  margin-top: 5px;
+  width: 10vw;
+  height: 80vh;
   display: inline-block;
 }
 
